tests/dataset/tpc-ds/compiler/rust/q48.error
rustc: exit status 1
warning: type `Store_sale` should have an upper camel case name
 --> /tmp/q48.rs:3:8
  |
3 | struct Store_sale {
  |        ^^^^^^^^^^ help: convert the identifier to upper camel case: `StoreSale`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

warning: type `Customer_demographic` should have an upper camel case name
  --> /tmp/q48.rs:18:8
   |
18 | struct Customer_demographic {
   |        ^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `CustomerDemographic`

warning: type `Customer_addres` should have an upper camel case name
  --> /tmp/q48.rs:25:8
   |
25 | struct Customer_addres {
   |        ^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `CustomerAddres`

warning: type `Date_dim` should have an upper camel case name
  --> /tmp/q48.rs:32:8
   |
32 | struct Date_dim {
   |        ^^^^^^^^ help: convert the identifier to upper camel case: `DateDim`

error[E0308]: mismatched types
  --> /tmp/q48.rs:59:23
   |
59 |     assert!(result == 35 as f64);
   |             ------    ^^^^^^^^^ expected `i32`, found `f64`
   |             |
   |             expected because this is `i32`

error: aborting due to 1 previous error; 4 warnings emitted

For more information about this error, try `rustc --explain E0308`.
